added getCategories test